[package]
name = "packet_sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
pcap = "1.1.0"
pktparse = "0.7.1"
dns-parser = "0.8"
tls-parser = "0.11.0"
hwaddr = "0.1.6"
nom = "7.1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
httparse = "1.3.0"
threadpool = "1.0"
num_cpus = "1.0"