[package]
name = "packet_sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
pcap = "0.7.0"
pktparse = {version = "0.4.0", features = ["derive"]}
dns-parser = "0.8"
tls-parser = "0.7"
hwaddr = "0.1.2"
nom = "5.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
httparse = "1.3.0"
threadpool = "1.0"
num_cpus = "1.0"
whoami = "1.1.1"