[package]
name = "packet_sniffer"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2.33.0"
pcap = "1.2.0"
pktparse = "*"
dns-parser = "0.8"
tls-parser = "0.11.0"
hwaddr = "0.1.2"
nom = "7.1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
httparse = "1.3.0"
threadpool = "1.0"
num_cpus = "1.0"
